fix: navbar styling clean up. fixed user style sheet spacing, changed from "fixed" to top (for sticky later), and made new Link for Browse all pokemon for future implementation.

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,7 @@
 html {
   overflow-y: scroll;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
